--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 .roe
 {
 	min-height: 100%;
-	background-image: url(../img/tweed.png);
+	/*[disabled]background-image:url(../img/tweed.png);*/
 	background-color: transparent;
 }
 .orbit-container
@@ -11,12 +11,9 @@
 }
 .orbit-bullets
 {
-	display: none;
-	visibility: hidden;
-	max-height: 0px;
-}
-OL.orbit-bullets
-{
+	/*[disabled]display:none;*/
+	/*[disabled]visibility:hidden;*/
+	/*[disabled]max-height:0px;*/
 }
 .top-bar A
 {
@@ -86,6 +83,25 @@ H4, H1, H2, H3, H5, H6
 {
 	background-color: #151515;
 	border: 1px solid #232323;
+}
+.divInfo5 .panel
+{
+	background: #FFFFFF;
+/*Old browsers*/
+	background: -moz-linear-gradient(-45deg, #ffffff 0%, #f1f1f1 50%, #e1e1e1 51%, #f6f6f6 100%);
+/*FF3.6+*/
+	background: -webkit-gradient(linear, left top, right bottom, color-stop(0%,#ffffff), color-stop(50%,#f1f1f1), color-stop(51%,#e1e1e1), color-stop(100%,#f6f6f6));
+/*Chrome,Safari4+*/
+	background: -webkit-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+/*Chrome10+,Safari5.1+*/
+	background: -o-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+/*Opera 11.10+*/
+	background: -ms-linear-gradient(-45deg, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+/*IE10+*/
+	background: linear-gradient(135deg, #ffffff 0%,#f1f1f1 50%,#e1e1e1 51%,#f6f6f6 100%);
+/*W3C*/
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f6f6f6',GradientType=1 );
+/*IE6-9 fallback on horizontal gradient*/
 }
 .listing
 {
